test/1.4/errors/T_ERETARGS.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

method m0() -> (int) {
    /// ERROR ERETARGS
    return;
}

method m1() {
    /// ERROR ERETARGS
    return 4;
}

method m2() throws {
    /// ERROR ERETARGS
    return 4;
}

method m3() -> (int, int) {
    /// ERROR ERETARGS
    return 4;
}

inline method m4(inline x) {
    /// ERROR ERETARGS
    return x;
}

method init() {
    m0();
    m1();
    try m2(); catch;
    local int x;
    (x, x) = m3();
    m4(0);
}
